[package]
name = "mesowest"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"
description = "Access the Mesowest weather API in idiomatic, safe Rust"
readme = "README.md"
repository = "https://github.com/RossSmyth/mesowest.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
